# CW4_Vacancies_Parsing

./: .gitignore  main.py  pyproject.toml  settings.py
api_models/: hh_api.py  sj_api.py
models/: exceptions.py  get_remote_data_mixin.py  hh_api.py  json_saver.py  menu.py  vacancy.py  validate_mixin.py
utils/: search_filter.py
